# weServer

./: .clang-format  .clang-tidy  .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  conanfile.py  cppcheck.suppressions
.github/workflows/: ci.yml
cmake/: WeServerConfig.cmake.in  WeServerDependencies.cmake  WeServerInstall.cmake  WeServerOptions.cmake  WeServerTargets.cmake
include/Core/: Common.h
include/Core/CRUD/: Receive.h
include/web_server/: constants.h  error.h  http_session.h  request_context.h  server.h  server_certificate.h  shared_state.h
include/web_server/crud/: items.h
include/web_server/store/: item.h  memory_store.h
scripts/: build.sh  ci.sh  ci_build.sh  ci_clang_tidy.sh  ci_common.sh  ci_cppcheck.sh  ci_format.sh  ci_integration.sh  ci_test_unit.sh  lint_python.sh  test_crud.py
src/: CMakeLists.txt  ServerOxana.cpp  main.cpp
src/Core/: Common.cc  Common.cpp  Common.h  ConnectionListener.cpp  ConnectionListener.h  Server.cc  Server.cpp  Server.h  ServerCertificate.hpp  Session.cc  Session.cpp  Session.h
src/crud/: CMakeLists.txt  items.cpp
src/net/: CMakeLists.txt  http_session.cpp  server.cpp
src/protocol/: CMakeLists.txt  error.cpp  request_context.cpp  server_certificate.cpp
src/store/: CMakeLists.txt  item.cpp  memory_store.cpp
test/: CMakeLists.txt  test_memory_store.cpp
